--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,3 @@
 MARKETAUX_API_KEY = "uWyIWJ8o3fMi2sDV1rjHunDXlle3DD4bdZSWbZL4"
 ALPHAVANTAGE_API_KEY = "0H0PI81A4T6X2J9E"
+FMP_API_KEY = "SvVKAZpBupndSw0qK7vsT6rnCZ1AuWil"
