--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,4 +1,4 @@
 MARKETAUX_API_KEY = "uWyIWJ8o3fMi2sDV1rjHunDXlle3DD4bdZSWbZL4"
 ALPHAVANTAGE_API_KEY = "0H0PI81A4T6X2J9E"
 FMP_API_KEY = "SvVKAZpBupndSw0qK7vsT6rnCZ1AuWil"
-FRED_API_KEY = "357745ca92b751bf20b6131ca8bd8646'
+FRED_API_KEY = "357745ca92b751bf20b6131ca8bd8646"
